Switched api return values from zipfile to json
